[tool.poetry]
name = "l402"
version = "0.0.8"
description = "Python implementation of the client/server L402 protocol flow"
authors = [
    "Pol Alvarez <pol@fewsats.com>",
    "Jordi Montes <jordi@fewsats.com>"
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/fewsats/l402-python"
Issues = "https://github.com/fewsats/l402-python/issues"

[tool.poetry.dependencies]
python = ">=3.10"

httpx = ">=0.27.0"
pymacaroons = ">=0.13.0"
fastapi = ">=0.111.0"
starlette = ">=0.37.2"
flask = ">=3.0.3"
python-fasthtml = ">=0.2.1"
requests = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.1.1"
pytest-asyncio = ">=0.23.6"
pytest-mock = ">=3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"